--- a/Exp11.ipynb
+++ b/Exp11.ipynb
@@ -22,7 +22,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 2
+     "prompt_number": 5
     },
     {
      "cell_type": "code",
@@ -143,31 +143,11 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "mean(CSI_data[0])"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [
-      {
-       "output_type": "pyout",
-       "prompt_number": 5,
-       "text": [
-        "157.79099999999994"
-       ]
-      }
-     ],
-     "prompt_number": 5
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "from scipy.stats import ks_2samp\n",
-      "for i in range(0,len(X)):\n",
-      "    y_csi = CSI_data[i]\n",
-      "    y_scirl = SCIRL_data[i]\n",
-      "    pvalue = ks_2samp(y_csi,y_scirl)[1]\n",
-      "    print \"Pour X = \"+str(X[i])+(\", \\tKS mean equality test p-value : %.2e \"%pvalue)+\"\\t\\t\"+(\"REJECTED\" if pvalue < 0.01 else \"\")"
+      "from matrix2latex import matrix2latex\n",
+      "m = [[1, 1], [2, 4], [3, 9]] # python nested list\n",
+      "t = matrix2latex(m)\n",
+      "print t\n",
+      "X"
      ],
      "language": "python",
      "metadata": {},
@@ -176,16 +156,69 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Pour X = 10, \tKS mean equality test p-value : 4.52e-14 \t\tREJECTED\n",
-        "Pour X = 30, \tKS mean equality test p-value : 1.31e-02 \t\t\n",
-        "Pour X = 100, \tKS mean equality test p-value : 1.40e-01 \t\t\n",
-        "Pour X = 300, \tKS mean equality test p-value : 8.94e-01 \t\t\n",
-        "Pour X = 700, \tKS mean equality test p-value : 5.56e-01 \t\t\n",
-        "Pour X = 1000, \tKS mean equality test p-value : 7.94e-01 \t\t\n"
+        "\\begin{table}[ht]\n",
+        "\t\\begin{center}\n",
+        "\t\t\\begin{tabular}{cc}\n",
+        "\t\t\\toprule\n",
+        "\t\t\t$1$ & $1$\\\\\n",
+        "\t\t\t$2$ & $4$\\\\\n",
+        "\t\t\t$3$ & $9$\\\\\n",
+        "\t\t\\bottomrule\n",
+        "\t\t\\end{tabular}\n",
+        "\t\\end{center}\n",
+        "\\end{table}\n"
+       ]
+      },
+      {
+       "output_type": "pyout",
+       "prompt_number": 8,
+       "text": [
+        "[10, 30, 100, 300, 700, 1000]"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 8
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "from scipy.stats import ks_2samp\n",
+      "table = zeros((4,2))\n",
+      "for i in range(0,len(X[:4])):\n",
+      "    y_csi = CSI_data[i]\n",
+      "    y_scirl = SCIRL_data[i]\n",
+      "    pvalue = ks_2samp(y_csi,y_scirl)[1]\n",
+      "    table[i,0] = X[i]\n",
+      "    table[i,1] = pvalue\n",
+      "t = matrix2latex(table, headerRow=[\"Number of expert samples\",\"$p$-value\"])\n",
+      "print t"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "\\begin{table}[ht]\n",
+        "\t\\begin{center}\n",
+        "\t\t\\begin{tabular}{cc}\n",
+        "\t\t\\toprule\n",
+        "\t\t\tNumber of expert samples & $p$-value\\\\\n",
+        "\t\t\t\\midrule\n",
+        "\t\t\t$10$ & $4.5195\\e{-14}$\\\\\n",
+        "\t\t\t$30$ & $0.0131123$\\\\\n",
+        "\t\t\t$100$ & $0.139975$\\\\\n",
+        "\t\t\t$300$ & $0.893752$\\\\\n",
+        "\t\t\\bottomrule\n",
+        "\t\t\\end{tabular}\n",
+        "\t\\end{center}\n",
+        "\\end{table}\n"
+       ]
+      }
+     ],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
